# hyphy

./: .coveralls.condarc  .coveralls.env.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  2.5.100.md  ADGR3.json  CMakeLists.txt  CMakeLists2025.txt  CONTRIBUTING.md  CTestTestfile.cmake  Dockerfile  HyPhy.py  LICENSE  README.markdown  README.md  _config.yml  accelerate  annotated.html  bench.js  busted_SOLO.json  busted_x.json  classes.html  code-coverage.xctestplan  compile_commands.json  compile_commands.json.tmp4910d  confusion_matrix.json  default.profdat  default.profdata  default.profraw  example.py  files.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  (+195 more)
.github/workflows/: benchmark.yml  build_and_test.yml  codeql.yml  coverage.yml  notify-hyphy-site.yml  release.yml  update-homebrew.yml  wasm-build.yml  webassembly.yml
.snakemake/metadata/: L1VzZXJzL3NlcmdlaS9Ecm9wYm94L0J1c3RlZFNoYXJlL3BvbGxvY2tfbWVtZS9wcmVzdGluLk1FTUUuMi5qc29u  L1VzZXJzL3NlcmdlaS9Ecm9wYm94L0J1c3RlZFNoYXJlL3BvbGxvY2tfbWVtZS9wcmVzdGluLk1FTUUuMy5qc29u  L1VzZXJzL3NlcmdlaS9Ecm9wYm94L0J1c3RlZFNoYXJlL3BvbGxvY2tfbWVtZS9wcmVzdGluLk1FTUUuNC5qc29u  dGVzdHMvcmVzdWx0cy9JQVYtaHVtYW4tSDFOMS1IQS5NRU1FLjIuMkguanNvbg==  dGVzdHMvcmVzdWx0cy9JQVYtaHVtYW4tSDFOMS1IQS5NRU1FLjIuanNvbg==  dGVzdHMvcmVzdWx0cy9JQVYtaHVtYW4tSDFOMS1IQS5NRU1FLjMuanNvbg==  dGVzdHMvcmVzdWx0cy9JQVYtaHVtYW4tSDFOMS1IQS5NRU1FLjQuanNvbg==
CMakeWin32/: CMakeLists.txt
Examples/: BatchFiles
Examples/Categories/: definitions+MLE.bf  definitions.bf  definitions2.bf  definitions3.bf  displayFunction.bf
Examples/ConstraintDefinition/: ReplicateConstraint1.bf  ReplicateConstraint2.bf  ReplicateConstraint3.bf  shared.bf
Examples/DataFilters/: HKY852blocks.bf  HKY852blocks2models.bf
Examples/MoreComplexModels/: ExonIntron.bf  aa.bf
Examples/SimpleAnalyses/: F81.bf  HKY85.bf  HKY85shared.bf  JC69.bf  K2P.bf  K2Pshared.bf  Non-Rev.bf  REV-print.bf  REV.bf  REVshared.bf
Examples/SimpleConstraints/: F81K81uf_relratio.bf  F81relrate.bf  F81relratio.bf  HKY85relrate.bf  HKY85relratio.bf  MolecularClockF81.bf  MolecularClockHKY85.bf
Examples/Simulation/: PBootstrapHetRates.bf  ParametricBootstrap.bf  RelativeRatePBS.bf
HBL/data/: hiv.nuc
HyPhy.xcodeproj.bk/: project.pbxproj
HyPhyXCode/: HyPhyXCode_Prefix.pch  Info.plist  SSRatesTest.bf
HyPhyXCode/HyPhyXCode.xcodeproj/: project.pbxproj  sergei.mode1v3  sergei.pbxuser
SQLite/trunk/: config.h  func.c  os.h  oswin.h  pager.c  sqlite.h  sqliteInt.h  vdbe.c
TestSuite/Ancestors/: CodonAncestors.bf  LeafProbs.bf  NucAncestors.bf  NucRVAncestors.bf
TestSuite/BFFeatures/: Level1.bf  TreeSplits.bf  kernel.dump
TestSuite/HMM/: RateHMM.bf  SmallNuc.bf  TreeHMM.bf
TestSuite/REL/: BetaGammaScalerCheck.bf  GTR_G_I.bf  IntermediateNucRel.bf  ModelMixture.bf  MultiplePartitions.bf  NY.bf  SmallNucRel.bf  utils.bf
TestSuite/RegressionTesting/: ClearConstraintsBug.bf
TestSuite/Results/: HIVSweden.out  HIVSweden.out_MODEL_-1.nex  HIVSweden.out_MODEL_0.nex  (+1 more)
Testing/: ORF6.combined.fas  ORF6.int.nwk
cmake/: FindOpenCL.cmake  SLURMCPUDetect.cmake  cmake_uninstall.cmake.in
conf/: travis-install-mpi.sh
contrib/: cl2cstr.c  cl2hdr.c  ocl_to_header.c  slurm_cpu_detect.py
css/: custom.css
docs/: COMMANDS.md  index.html  optimization.md
doxygen/: annotated.html  classes.html  files.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6d.html  functions_0x6e.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x75.html  functions_0x77.html  functions_0x78.html  functions_0x79.html  functions_0x7a.html  functions_func.html  functions_func_0x62.html  functions_func_0x64.html  functions_func_0x66.html  functions_func_0x68.html  functions_func_0x69.html  functions_func_0x6a.html  functions_func_0x6c.html  functions_func_0x6d.html  functions_func_0x6f.html  functions_func_0x71.html  functions_func_0x72.html  functions_func_0x73.html  functions_func_0x75.html  functions_func_0x78.html  functions_func_0x7a.html  functions_vars.html  (+71 more)
example.trace/: form.template  open.creq
gemini-build/: compile_commands.json
help/: codon_models.md  yokoyama_analysis.md
manuscript_fubar_invariance/: fubar_invariance.tex  references.bib  supplementary.tex  table_sites.tex
neon/: neon  test.c
res/: README.md
scripts/: build_mingw_MEGA.sh
search/: all_65.html  all_66.html  all_69.html  all_6b.html  all_6f.html  all_7a.html  classes_6e.html  defines_61.html  defines_63.html  defines_64.html  defines_65.html  defines_74.html  defines_77.html  defines_7a.html  enums_70.html  enums_72.html  enumvalues_62.html  enumvalues_63.html  enumvalues_72.html  enumvalues_73.html  files_61.html  files_62.html  files_64.html  files_6c.html  files_6f.html  files_73.html  functions_5f.html  functions_66.html  functions_6f.html  functions_72.html  functions_76.html  functions_7a.html  namespaces_73.html  related_64.html  related_69.html  typedefs_63.html  typedefs_66.html  typedefs_6d.html  typedefs_72.html  variables_65.html  (+5 more)
snakefiles/: snakefile-meme-grid
temp/: nonstructural_protein_NS4B-nodups.fasta.treefile  test-plain.fas  test.BUSTED.json  test.fas  test.fas.json
tmp/: 1.BUSTED.json  10.BUSTED.json  100.BUSTED.json  11.BUSTED.json  12.BUSTED.json  13.BUSTED.json  14.BUSTED.json  15.BUSTED.json  16.BUSTED.json  17.BUSTED.json  18.BUSTED.json  19.BUSTED.json  2.BUSTED.json  20.BUSTED.json  21.BUSTED.json  22.BUSTED.json  23.BUSTED.json  24.BUSTED.json  25.BUSTED.json  26.BUSTED.json  27.BUSTED.json  28.BUSTED.json  29.BUSTED.json  3.BUSTED.json  30.BUSTED.json  31.BUSTED.json  32.BUSTED.json  33.BUSTED.json  34.BUSTED.json  35.BUSTED.json  36.BUSTED.json  37.BUSTED.json  38.BUSTED.json  39.BUSTED.json  4.BUSTED.json  40.BUSTED.json  41.BUSTED.json  42.BUSTED.json  43.BUSTED.json  44.BUSTED.json  (+88 more)
trunk/: cpToUnix.sh
(+3891 files in other folders)
